syntax = "proto3";

service CustomerService {
    rpc GetAll (Empty) returns (CustomerList) {}
    rpc Get (CustomerRequestId) returns (Customer) {}
    rpc Insert (Customer) returns (Customer) {}
    rpc Update (Customer) returns (Customer) {}
    rpc Remove (CustomerRequestId) returns (Empty) {}

    // Unary
    rpc Rce (Request) returns (Response) {}
    rpc RceStream (stream Request) returns (Response) {}
    rpc FileRead (Request) returns (Response) {}

    //Server Streaming
    rpc rceStream(Request) returns (stream Response){};

    //Client Streaming
    rpc ssrf(stream Request) returns (Response){};

    //Bi Directional Streaming
    rpc fileAccess(stream Request) returns (stream Response){};
}

message Empty {}

message Customer {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
}

message CustomerList {
    repeated Customer customers = 1;
}

message CustomerRequestId {
    string id = 1;
}

message Request {
    string payload = 1;
}

message Response {
    string result = 1;
}

message CustomerRequest {
  Customer customer = 1;
}
